[tool.poetry]
name = "nornir_tests"
version = "0.1.0a4"
description = ""
authors = ["Patrick Avery <patrickdaj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
nornir = {version = "*", allow-prereleases = true}
jsonpath-ng = "^1.5.2"
lxml = "^4.5.2"
dataclasses = {version = "^0.7", python = "~3.6"}
assertpy = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1"
ipdb = "^0.13.3"
black = "^20.8b1"
mypy = "^0.782"
pylama = "^7.7.1"
pytest-coverage = "^0.0"
nbval = "*"
sphinx = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.6.1"
sphinx-issues = "^1.2.0"
sphinx_rtd_theme = "^0.4.3"
nornir-napalm = "*"
napalm-vyos = "*"
nornir-utils = "*"
# no pypi package yet, will remove eventually
nornir-netmiko = {path = "/home/patrick/dev/nornir_netmiko"}
#nornir-rich = {version = "^0.1.1a7", allow-prereleases = true}
nornir-rich = {path = "/home/patrick/dev/nornir_rich"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
