[tool.poetry]
name = "nornir_tests"
version = "0.1.0a11"
description = "Testing extension for Nornir"
repository = "https://github.com/patrickdaj/nornir_tests"
authors = ["Patrick Avery <patrickdaj@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
nornir = {version = "*", allow-prereleases = true}
jsonpath-ng = "^1.5.2"
lxml = "^4.5.2"
dataclasses = {version = "^0.7", python = "~3.6", optional = true }
assertpy = "^1.1"
wrapt = "^1.12.1"
rich = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1"
ipdb = "^0.13.3"
black = "^20.8b1"
mypy = "^0.782"
pylama = "^7.7.1"
pytest-coverage = "^0.0"
#nbval = "*"
sphinx = "^3.0.3"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.6.1"
sphinx-issues = "^1.2.0"
sphinx_rtd_theme = "^0.4.3"
nornir-utils = {version = "*"}
nornir-napalm = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
